Additions:
Basic income now works with bridged economies
Config GUI support (when Mod Menu is loaded)
Full compatibility with Gunpowder API

Changes:
Dropped Forge Support
Updated to 1.16.X
/wallet balance now requires choosing a player (was previously optional). Use /balance to see your own balance.
/gehelp now has separate entries for each wallet subcommand
Grand Economy now uses Fireplace Lib - it's included, no extra action needed from users.
/convert has been removed again. This time Grand Exchange really will have a similarly easy way to convert items to currency.

Fixes/Internal Changes:
Performance improvements for saving and loading account data
Performance improvements for determining when basic income should be given
Fixed a typo in the message that says you received money
Improved the API so other mods can more easily interact with Grand Economy.