@@ -14,7 +14,7 @@
     "issues": "https://github.com/The-Fireplace-Minecraft-Mods/Grand-Economy/issues"
   },
 
-  "license": "GPL-2.0",
+  "license": "MPL-2.0",
   "icon": "assets/grandeconomy/logo.png",
 
   "environment": "*",
